--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
     "react-hooks-global-state": "^2.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
-    "sass": "^1.71.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "babel src --out-dir dist && terser dist/app.js -o dist/app.min.js",
+    "build": "npx webpack",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -40,6 +39,16 @@
     ]
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.24.7"
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
+    "babel-loader": "^9.2.1",
+    "css-loader": "^7.1.2",
+    "sass": "^1.79.1",
+    "sass-loader": "^16.0.1",
+    "style-loader": "^4.0.0",
+    "terser-webpack-plugin": "^5.3.10",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4"
   }
 }
